--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Yarn Install
         run: |
-          yarn Install
+          yarn install
       - name: Production Build
         run: |
           yarn build
